welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:4: error: value ==- is not a member of Int
		if (nums(x)==value && a==-1) {
                                       ^